# tomica

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.ipynb
src/: lib.rs  models.rs
src/operators/: mod.rs  utils.rs
tomica/: __init__.py
tomica/src/: base.rs
