[package]
name = "tomica"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tomica"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
pyo3-polars = "0.25"
polars = { version = "0.52", features = ["lazy","timezones","rolling_window"]}
polars-compute = "*"